--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,33 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.jumbotron{
+    background: lightblue;
+    border-radius: 0px!important;
+}
+
+.searchForm{
+    height: 80px;
+    font-size: 50px;
+}
+
+.searchBtn{
+    height: 80px;
+    width: 200px;
+}
+
+.btn {
+    margin-left: 5px;
+}
+
+.sortBtn {
+    margin-right: 20px;
+}
+
+.active {
+    background-color: lightblue;
+    padding: 18px 10px;
 }
